refactoring the code to stay in a good order